@@ -4,6 +4,8 @@
 *.tar
 *.tgz
 *.bz2
+*.rej
+*.orig
 =*
 TAGS
 TODO
